# KeyLogger

./: .gitignore  CMakeLists.txt  README.md  brtool  config.hpp.in  keylogger.manifest  keylogger.rc  main.cpp  remote.info.example
src/: main.cpp  notifyicon.cpp  notifyicon.hpp  resource.hpp  window.cpp  window.hpp
